--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -312,6 +312,8 @@ nav {
 	/* border-bottom: 1px solid #ff8c00; */
 	/* border-inline-width: 50%; */
 	padding-bottom: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 .delete-btn {
