--- a/client/src/styles/PostList.css
+++ b/client/src/styles/PostList.css
@@ -11,8 +11,9 @@
   align-items: center;
   justify-content: start;
   margin: 20px;
-  padding: 45px 20px 20px 20px;
-  border: 1px solid black;
+  /* padding: 20px 20px 20px; */
+  padding-bottom: 20px;
+  /* border: 1px solid black; */
   border-radius: 10px;
   width: 550px;
   text-align: center
